<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Colorifornia</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="drawer_open" translatable="false">Drawer opened</string>
    <string name="drawer_close" translatable="false">Drawer closed</string>
    <!-- Preferences -->
    <string name="pref_key_user_learned_drawer" translatable="false">user_learned_drawer</string>
    <string name="not_first_time" translatable="false">notFirstTimeAppStarts</string>
    <string name="color" translatable="false">color</string>
    <string name="save_color">Save color (also via "V" or double click)</string>
    <string name="erase">Clear saved colors</string>
    <string name="ok" translatable="false">OK</string>
    <string name="no">Cancel</string>
    <string name="share">Share color</string>

    <string name="prefs_emails">Emails for sharing</string>
    <string name="btn_ok">OK</string>
    <string name="btn_del_selected">Delete selected</string>
    <string name="btn_add_new">Add new</string>

    <string name="dial_title_add_email">Add email for color sharing</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="sb_emails">Email(s):\n</string>
    <string name="sb_no_emails">\nNo emails to delete...</string>
    <string name="sb_wb_deleted">\n\nwill be deleted</string>
    <string name="dial_title_del_emails">Deleting emails</string>
    <string name="new_line" translatable="false">\n</string>
    <string name="toast_email">"email: "</string>
    <string name="toast_hb_saved">" has been saved"</string>

    <string name="select_picture">Select Picture</string>
    <string name="file_not_found" translatable="false">File not found...</string>
    <string name="settings_label">Colorifornia Settings</string>
    <string name="title_activity_app_settings">Settings</string>
    <string name="prefs_user_saved_emails" translatable="false">user_saved_emails</string>

    <string name="ctx_to_prev_screen">To previous screen</string>
    <string name="ctx_undo">undo</string>
    <string name="ctx_discard">discard selected</string>
    <string name="ctx_select">selection</string>
    <string name="email_creating_error">Something went wrong while creating email. Try again please. </string>
    <string name="email_error_no_selected">There is nothing to send. Select needed colors and repeat.</string>
    <string name="prefs_title">Edit emails</string>
    <string name="prefs_summary">Adding/deleting emails for sending colors params</string>
    <string name="alpha">"alpha: "</string>
    <string name="red">"red: "</string>
    <string name="green">"green: "</string>
    <string name="blue">"blue: "</string>
    <string name="open_image">Open Image</string>
    <string name="prefs_alpha_mode" translatable="false">alpha_mode</string>
    <string name="dialog_wallpaper_title">Set Wallpaper</string>
    <string name="dialog_wallpaper_message">The current color will be set as a Wallpaper on your device.</string>
    <string name="err_impl_color_clicked_listener" translatable="false">" must implement ColorClickedListener"</string>
    <string name="ctx_set_wallpaper">Set color as a Wallpaper</string>
    <string name="save_to_favorites">Save to favorites</string>
    <string name="err_creating_email" translatable="false">"Error while creating email: "</string>
    <string name="email_subject">Color parameters from \"Colorifornia\"</string>
    <string name="chooser_title">Send color(s) parameters...</string>
    <string name="hint_op_image_title">Hint</string>
    <string name="hint_op_image_msg">This is a stub image. To open an actual image, press "Gallery folder" icon on the action bar.</string>
    <string name="key_prefs_help" translatable="false">prefs_help</string>
    <string name="prefs_help_title">Help</string>
    <string name="prefs_help_summary">Tips and tricks</string>
    <string name="prefs_title_about">About</string>
    <string name="prefs_summary_about">Info about Colorifornia App</string>
    <string name="prefs_contacts_summary">colorifornia@yahoo.com\n(Send email to developer)</string>
    <string name="prefs_contacts_title">Contacts</string>
    <string name="key_prefs_about" translatable="false">key_prefs_about</string>
    <string name="key_prefs_contacts" translatable="false">key_prefs_contacts</string>
    <string name="dialog_about_title">About "Colorifornia" App</string>
    <string name="dialog_about_message_ver">Version: </string>
    <string name="color_saved">Color saved</string>
    <string name="email_to_dev_subj">From \"Colorifornia\" app user</string>
    <string name="del_color_title">Discard checked</string>
    <string name="del_colors_msg">All checked colors will be erased. Proceed?</string>
    <string name="del_colors_msg_nothing">An empty list. Nothing to delete.</string>
    <string name="title_activity_help">Help</string>
    <string name="info_about">

        \"Colorifornia\" is a convenient tool for working and playing with colors:\n\n

✓ You can easily create, adjust and compare colors\n
✓ Save favorite colors\n
✓ Customize font color to the background\n
✓ Choose the right background to any color font\n
✓ Send parameters of color(s) to any email (or via "Messengers")\n
✓ Set any color as a "Wallpaper" of your device\n
✓ You always have full info about your colors (ARGB, RGB, AHEX, HEX and HSV)\n
✓ Restore color from parameters\n
✓ Use device camera or gallery for picking colors from any image\n
✓ To create any color the App has convenient controls (two variants)\n
✓ Fast navigation within the "Colorifornia" via "Navigation drawer"\n
✓ For convenience, you can use gesture control\n\n

Dear users!\n
        We\'ll be really glad if "Colorifornia" helps you resolve at least one of your problems.\n
Is there something you don\'t like? Write an email to us - we will improve or fix it.\n
If you need additional options or functionality - send us a letter and we\'ll try to provide it.\n\n

colorifornia@yahoo.com\n
Andrew (developer)

    </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



</resources>
