<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <Preference
        android:defaultValue=""
        android:key="@string/prefs_user_saved_emails"
        android:summary="@string/prefs_summary"
        android:title="@string/prefs_title" />

    <Preference
        android:key="@string/key_prefs_help"
        android:summary="@string/prefs_help_summary"
        android:title="@string/prefs_help_title" />

    <Preference
        android:key="@string/key_prefs_about"
        android:summary="@string/prefs_summary_about"
        android:title="@string/prefs_title_about" />

    <Preference
        android:key="@string/key_prefs_contacts"
        android:summary="@string/prefs_contacts_summary"
        android:title="@string/prefs_contacts_title" />

</PreferenceScreen>